<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionHasToggle="false"
                app:sectionTitle="@string/system_section_title">

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowDeviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:rowLabel="@string/device_name_edit_label"
                    app:rowSaveDescription="@string/button_set_device_name" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkBoxKeepN2KSrc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="64dp"
                    android:minHeight="48dp"
                    android:text="@string/keep_n2k_switch"
                    android:textAlignment="viewStart" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkBoxEnableLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="64dp"
                    android:minHeight="48dp"
                    android:text="@string/log_switch"
                    android:textAlignment="viewStart" />

            </com.aboni.n2kRouter.ServiceSectionView>

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionTitle="@string/gps_switch">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkBoxEnableSysTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="64dp"
                    android:minHeight="48dp"
                    android:text="@string/time_switch"
                    android:textAlignment="viewStart" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkBoxEnableSTW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="64dp"
                    android:minHeight="48dp"
                    android:text="@string/stw_switch"
                    android:textAlignment="viewStart" />

            </com.aboni.n2kRouter.ServiceSectionView>

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionMeteo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionHasToggle="false"
                app:sectionTitle="@string/meteo_section_title">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkBoxEnableBME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="64dp"
                    android:minHeight="48dp"
                    android:text="@string/bme_switch"
                    android:textAlignment="viewStart" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/checkBoxEnableDHT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="64dp"
                    android:minHeight="48dp"
                    android:text="@string/dht_switch"
                    android:textAlignment="viewStart" />

            </com.aboni.n2kRouter.ServiceSectionView>

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionRPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionTitle="@string/rpm_switch">

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowEngineHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:rowLabel="@string/engine_hours_edit_label"
                    app:rowSaveDescription="@string/buton_save_engine_hours" />

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowRPMCalibration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:rowLabel="@string/rpm_calibration_edit_label"
                    app:rowSaveDescription="@string/button_save_rpm_calibration" />

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowRPMAdjustment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:rowLabel="@string/config_rpm_adjustment"
                    app:rowSaveDescription="@string/button_save_rpm_adjustment" />

            </com.aboni.n2kRouter.ServiceSectionView>

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionVED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionTitle="@string/ved_switch">

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowBatteryCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:rowLabel="@string/battery_capacity_edit_label"
                    app:rowSaveDescription="@string/button_save_battery_capacity" />

            </com.aboni.n2kRouter.ServiceSectionView>

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionSTWPaddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionTitle="@string/stw_paddle_switch">

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowSTWAdjustment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:rowLabel="@string/stw_adjustment_edit_label"
                    app:rowSaveDescription="@string/button_save_stw_adjustment" />

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowSTWAlpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:rowLabel="@string/stw_alpha_edit_label"
                    app:rowSaveDescription="@string/button_save_stw_alpha" />

            </com.aboni.n2kRouter.ServiceSectionView>

            <com.aboni.n2kRouter.ServiceSectionView
                android:id="@+id/sectionSeaTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sectionTitle="@string/water_temp_switch">

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowSeaTempAdjustment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:rowLabel="@string/sea_temp_adjustment_edit_label"
                    app:rowSaveDescription="@string/button_save_sea_temp_adjustment" />

                <com.aboni.n2kRouter.SettingRowView
                    android:id="@+id/rowSeaTempAlpha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    app:rowLabel="@string/sea_temp_alpha_edit_label"
                    app:rowSaveDescription="@string/button_save_sea_temp_alpha" />

            </com.aboni.n2kRouter.ServiceSectionView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>
